KAAV-2363 solid white lines at timeline to not have gaps fix

--- a/src/components/ProjectTimeline/ProjectTimeline.scss
+++ b/src/components/ProjectTimeline/ProjectTimeline.scss
@@ -123,7 +123,7 @@
           &.inner {
             top: 4px;
             height: 12px;
-            width: 100%;
+            width: calc(100% + 1px) !important;
             left: 0;
             &.start {
               width: 17px;
